rm logs
