# docs/swagger.json
@@ -9,9 +9,9 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/:longUrl": {
+        "/expand": {
             "get": {
-                "description": "Преобразует длинную ссылку в компактную форму.",
+                "description": "Преобразует короткую ссылку в исходную длинную ссылку.",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,21 +19,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Сокращение URL"
+                    "Расширение URL"
                 ],
-                "summary": "Сократить длинную ссылку",
+                "summary": "Расширить короткую ссылку до её оригинальной формы",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Длинная ссылка",
-                        "name": "longUrl",
-                        "in": "path",
-                        "required": true
+                        "description": "Короткая ссылка",
+                        "name": "shortUrl",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.ShortURL"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Сокращённая ссылка",
+                        "description": "Расширенная длинная ссылка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -56,9 +58,9 @@
                 }
             }
         },
-        "/:shortUrl": {
+        "/shorten": {
             "post": {
-                "description": "Преобразует короткую ссылку в исходную длинную ссылку.",
+                "description": "Преобразует длинную ссылку в компактную форму.",
                 "consumes": [
                     "application/json"
                 ],
@@ -66,21 +68,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Расширение URL"
+                    "Сокращение URL"
                 ],
-                "summary": "Расширить короткую ссылку до её оригинальной формы",
+                "summary": "Сократить длинную ссылку",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Короткая ссылка",
-                        "name": "shortUrl",
-                        "in": "path",
-                        "required": true
+                        "description": "Длинная ссылка",
+                        "name": "longUrl",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.LongURL"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Расширенная длинная ссылка",
+                        "description": "Сокращённая ссылка",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -110,6 +114,28 @@
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.LongURL": {
+            "type": "object",
+            "required": [
+                "long_url"
+            ],
+            "properties": {
+                "long_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ShortURL": {
+            "type": "object",
+            "required": [
+                "short_url"
+            ],
+            "properties": {
+                "short_url": {
                     "type": "string"
                 }
             }
